@@ -24,14 +24,14 @@ from assimulo.problem import Implicit_Problem
 def run_example(with_plots=True):
     """
     This example show how to use Assimulo and IDA for simulating sensitivities
-    for initial conditions.
+    for initial conditions.::
     
-    0 = dy1/dt - -(k01+k21+k31)*y1 - k12*y2 - k13*y3 - b1
-    0 = dy2/dt - k21*y1 + (k02+k12)*y2
-    0 = dy3/dt - k31*y1 + k13*y3
- 
-    y1(0) = p1, y2(0) = p2, y3(0) = p3
-    p1=p2=p3 = 0 
+        0 = dy1/dt - -(k01+k21+k31)*y1 - k12*y2 - k13*y3 - b1
+        0 = dy2/dt - k21*y1 + (k02+k12)*y2
+        0 = dy3/dt - k31*y1 + k13*y3
+     
+        y1(0) = p1, y2(0) = p2, y3(0) = p3
+        p1=p2=p3 = 0 
     
     See http://sundials.2283335.n4.nabble.com/Forward-sensitivities-for-initial-conditions-td3239724.html
     """
@@ -53,13 +53,6 @@ def run_example(with_plots=True):
         
         return N.array([res_0,res_1,res_2])
     
-    def handle_result(solver, t ,y,yd):
-        solver.t_sol += [t]
-        solver.y_sol += [y]
-        solver.p_sol[0] += [solver.interpolate_sensitivity(t, 0, 0)]
-        solver.p_sol[1] += [solver.interpolate_sensitivity(t, 0, 1)]
-        solver.p_sol[2] += [solver.interpolate_sensitivity(t, 0, 2)]
-    
     #The initial conditions
     y0 = [0.0,0.0,0.0]          #Initial conditions for y
     yd0 = [49.3,0.,0.]
@@ -71,8 +64,7 @@ def run_example(with_plots=True):
     
     #Sets the options to the problem
     imp_mod.yS0=yS0
-    imp_mod.handle_result = handle_result #Change the default handling of the result
-    
+
     #Create an Assimulo explicit solver (IDA)
     imp_sim = IDA(imp_mod)
     
@@ -95,25 +87,28 @@ def run_example(with_plots=True):
     
     #Plot
     if with_plots:
-        P.figure(2)
-        P.plot(imp_sim.t, N.array(imp_sim.p_sol[0])[:,0],
-               imp_sim.t, N.array(imp_sim.p_sol[0])[:,1],
-               imp_sim.t, N.array(imp_sim.p_sol[0])[:,2])
+        P.figure(1)
+        P.subplot(221)
+        P.plot(t, N.array(imp_sim.p_sol[0])[:,0],
+               t, N.array(imp_sim.p_sol[0])[:,1],
+               t, N.array(imp_sim.p_sol[0])[:,2])
         P.title("Parameter p1")
         P.legend(("p1/dy1","p1/dy2","p1/dy3"))
-        P.figure(3)
-        P.plot(imp_sim.t, N.array(imp_sim.p_sol[1])[:,0],
-               imp_sim.t, N.array(imp_sim.p_sol[1])[:,1],
-               imp_sim.t, N.array(imp_sim.p_sol[1])[:,2])
+        P.subplot(222)
+        P.plot(t, N.array(imp_sim.p_sol[1])[:,0],
+               t, N.array(imp_sim.p_sol[1])[:,1],
+               t, N.array(imp_sim.p_sol[1])[:,2])
         P.title("Parameter p2")
         P.legend(("p2/dy1","p2/dy2","p2/dy3"))
-        P.figure(4)
-        P.plot(imp_sim.t, N.array(imp_sim.p_sol[2])[:,0],
-               imp_sim.t, N.array(imp_sim.p_sol[2])[:,1],
-               imp_sim.t, N.array(imp_sim.p_sol[2])[:,2])
+        P.subplot(223)
+        P.plot(t, N.array(imp_sim.p_sol[2])[:,0],
+               t, N.array(imp_sim.p_sol[2])[:,1],
+               t, N.array(imp_sim.p_sol[2])[:,2])
         P.title("Parameter p3")
         P.legend(("p3/dy1","p3/dy2","p3/dy3"))
-        imp_sim.plot() #Plot the solution
+        P.subplot(224)
+        P.plot(t,y)
+        P.show()
 
 if __name__=='__main__':
     run_example()
